# sunny-places

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  app.py  conversation_with_codex_markdown.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: clean.py
src/sunny_places/: __init__.py  app_state.py  comfort.py  demo_logic.py  geocoding.py  i18n.py  map_folium.py  map_layers.py  models.py  ranking.py  sampling.py  services.py  solar.py  theme.py  ui_state.py  weather.py  wind.py
tests/: test_app_state.py  test_comfort.py  test_demo_logic.py  test_geocoding.py  test_i18n.py  test_map_folium.py  test_ranking.py  test_sampling.py  test_services.py  test_solar.py  test_theme.py  test_ui_state.py  test_weather.py  test_wind.py
